test_programs/compile_failure/noirc_frontend_tests_traits_errors_if_impl_trait_constraint_is_not_satisfied/src/main.nr

        pub trait Greeter {
            fn greet(self);
        }

        pub trait Foo<T>
        where
            T: Greeter,
        {
            fn greet<U>(object: U)
            where
                U: Greeter,
            {
                object.greet();
            }
        }

        pub struct SomeGreeter;

        pub struct Bar;

        impl Foo<SomeGreeter> for Bar {}

        fn main() {}
    